@@ -141,6 +141,13 @@ CVS code -
 	- Try to automatically detect whether UTF-8 support is needed by
 	  setting the NO_UTF8 flag if setlocale() returns a string that
 	  doesn't contain "UTF-8". (DLR)
+- utils.c:
+  regexec_safe()
+	- Remove redundant regexec #define, and move the regexec #undef
+	  to nano.h. (DLR)
+  is_blank_char()
+	- Rewrite to use ctype functions instead of checking directly
+	  for spaces and tabs. (DLR)
 - winio.c:
   titlebar()
 	- Rename some variables for consistency, make space an int
